--- a/SMSProvider.Tests/SMSProvider.Tests.csproj
+++ b/SMSProvider.Tests/SMSProvider.Tests.csproj
@@ -6,8 +6,8 @@
     <ProjectGuid>{207D9C2F-6E2B-4E64-BDC3-84A858F38849}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SMSAdapter.Tests</RootNamespace>
-    <AssemblyName>SMSAdapter.Tests</AssemblyName>
+    <RootNamespace>Neuzilla.SMSProvider.Tests</RootNamespace>
+    <AssemblyName>Neuzilla.SMSProvider.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -63,7 +63,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Neuzilla.SMSAdapter\Neuzilla.SMSProvider.csproj">
+    <ProjectReference Include="..\SMSProvider\SMSProvider.csproj">
       <Project>{07e8b819-bca7-4337-b3ca-40ebf53dffec}</Project>
       <Name>Neuzilla.SMSProvider</Name>
     </ProjectReference>
