Implement Custom vendor section in configuration file
something is still not correct. vendor element is not parsed correctly

--- a/SMSProvider.Tests/App.config
+++ b/SMSProvider.Tests/App.config
@@ -1,5 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <configSections>
+    <section name="vendors" type="Neuzilla.SMSProvider.Configuration.VendorsConfigSection, Neuzilla.SMSProvider" />
+  </configSections>
+  <vendors>
+    <vendor name="HuaXinTech" host="http://sh2.ipyy.com/" username="username" password="password" signature="【Neuzilla】" />
+    <vendor name="CCP" host="app.cloopen.com" port="8883" username="accountsid" token="token" appid="appid" />
+  </vendors>
   <appSettings>
     <add key="HuaXinTech_Host" value="http://sh2.ipyy.com/"/>
     <add key="HuaXinTech_Username" value="username"/>
