--- a/SMSProvider.Tests/App.config
+++ b/SMSProvider.Tests/App.config
@@ -18,6 +18,8 @@
     <add key="CCP_AccountSid" value="accountsid"/>
     <add key="CCP_AccountToken" value="token"/>
     <add key="CCP_AppId" value="appid"/>
-    
+
+    <add key="YunPian_Host" value="https://sms.yunpian.com/v2/sms/"/>
+    <add key="YunPian_ApiKey" value="apikey"/>
   </appSettings>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup></configuration>
