--- a/SMSProvider/SMSProvider.csproj
+++ b/SMSProvider/SMSProvider.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System" />
     <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -81,6 +82,34 @@
     <Compile Include="Vendors\HuaXinTech\HuaXinTechSendSMSApi.cs" />
     <Compile Include="Vendors\HuaXinTech\IHuaXinTechSendSMSApi.cs" />
     <Compile Include="Core\ISMSService.cs" />
+    <Compile Include="Vendors\YunPian\client\Api\ApiFactory.cs" />
+    <Compile Include="Vendors\YunPian\client\Api\ShortUrlApi.cs" />
+    <Compile Include="Vendors\YunPian\client\Api\SignApi.cs" />
+    <Compile Include="Vendors\YunPian\client\Api\SmsApi.cs" />
+    <Compile Include="Vendors\YunPian\client\Api\TplApi.cs" />
+    <Compile Include="Vendors\YunPian\client\Api\UserApi.cs" />
+    <Compile Include="Vendors\YunPian\client\Api\VideoSmsApi.cs" />
+    <Compile Include="Vendors\YunPian\client\Api\VoiceApi.cs" />
+    <Compile Include="Vendors\YunPian\client\Api\YunpianApi.cs" />
+    <Compile Include="Vendors\YunPian\client\Model\BlackWord.cs" />
+    <Compile Include="Vendors\YunPian\client\Model\Const.cs" />
+    <Compile Include="Vendors\YunPian\client\Model\Result.cs" />
+    <Compile Include="Vendors\YunPian\client\Model\ShortUrl.cs" />
+    <Compile Include="Vendors\YunPian\client\Model\Sign.cs" />
+    <Compile Include="Vendors\YunPian\client\Model\SignList.cs" />
+    <Compile Include="Vendors\YunPian\client\Model\SmsBatchSend.cs" />
+    <Compile Include="Vendors\YunPian\client\Model\SmsRecord.cs" />
+    <Compile Include="Vendors\YunPian\client\Model\SmsReply.cs" />
+    <Compile Include="Vendors\YunPian\client\Model\SmsSingleSend.cs" />
+    <Compile Include="Vendors\YunPian\client\Model\SmsStatus.cs" />
+    <Compile Include="Vendors\YunPian\client\Model\Template.cs" />
+    <Compile Include="Vendors\YunPian\client\Model\User.cs" />
+    <Compile Include="Vendors\YunPian\client\Model\VideoLayout.cs" />
+    <Compile Include="Vendors\YunPian\client\Model\VoiceSend.cs" />
+    <Compile Include="Vendors\YunPian\client\Model\VoiceStatus.cs" />
+    <Compile Include="Vendors\YunPian\client\Util\ApiUtil.cs" />
+    <Compile Include="Vendors\YunPian\client\YunpianClient.cs" />
+    <Compile Include="Vendors\YunPian\client\YunpianConf.cs" />
     <Compile Include="Vendors\YunPian\YunPianSendSMSApiResponse.cs" />
     <Compile Include="Vendors\YunPian\IYunPianSendSMSApi.cs" />
     <Compile Include="Vendors\YunPian\YuanPianSendSMSApi.cs" />
