update tests for new custom configsection

--- a/SMSProvider.Tests/App.config
+++ b/SMSProvider.Tests/App.config
@@ -6,20 +6,8 @@
   <vendors>
     <vendor name="HuaXinTech" host="http://sh2.ipyy.com/" username="username" password="password" signature="【Neuzilla】" />
     <vendor name="CCP" host="app.cloopen.com" port="8883" username="accountsid" token="token" appid="appid" />
+    <vendor name="YunPian" host="https://sms.yunpian.com/v2/sms/" accessToken="abcdefg"/>
   </vendors>
   <appSettings>
-    <add key="HuaXinTech_Host" value="http://sh2.ipyy.com/"/>
-    <add key="HuaXinTech_Username" value="username"/>
-    <add key="HuaXinTech_PasswordMD5" value="password"/>
-    <add key="HuaXinTech_Signature" value="【Neuzilla】"/>
-
-    <add key="CCP_Host" value="app.cloopen.com"/>
-    <add key="CCP_Port" value="8883"/>
-    <add key="CCP_AccountSid" value="accountsid"/>
-    <add key="CCP_AccountToken" value="token"/>
-    <add key="CCP_AppId" value="appid"/>
-
-    <add key="YunPian_Host" value="https://sms.yunpian.com/v2/sms/"/>
-    <add key="YunPian_ApiKey" value="apikey"/>
   </appSettings>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup></configuration>
